# template

./: Makefile  README.md  pyproject.toml
data/final/: final_data.csv
data/raw/: raw_data.csv
notebooks/: example.ipynb
src/: example.py
